Adding default search directory for v8

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,9 +10,16 @@ option(v8_compress_pointers "Whether v8 was build with V8_COMPRESS_POINTERS" on)
 option(v8_monolith "Whether v8 was built with monolith" ON)
 option(v8_shared "Whether v8 was built as a shared library" ON)
 option(v8_copy_shared "Whether to copy v8 so/dll to output directory" OFF)
+if (WIN32)
+    set(v8_search_libdir "")
+    set(v8_search_includedir "")
+else()
+    set(v8_search_libdir "/usr/local/lib")
+    set(v8_search_includedir "/usr/local/include/v8")
+endif()
 
 add_library(v8_deps INTERFACE)
-find_path(v8_include_dir NAMES v8.h REQUIRED)
+find_path(v8_include_dir NAMES v8.h HINTS "${v8_search_includedir}" REQUIRED)
 target_include_directories(v8_deps INTERFACE v8_include_dir)
 if (v8_compress_pointers)
     set(v8_flags "V8_COMPRESS_POINTERS")
@@ -56,10 +63,10 @@ else()
         set(v8_ext "a")
     endif()
     if (v8_monolith)
-        find_path(v8_lib_dir NAMES "libv8_monolith.${v8_ext}")
+        find_path(v8_lib_dir NAMES "libv8_monolith.${v8_ext}"  HINTS "${v8_search_libdir}")
         set(v8_libnames "v8_monolith")
     else()
-        find_path(v8_lib_dir NAMES "v8_libbase.${v8_ext}" "v8_libplatform.${v8_ext}" "v8.${v8_ext}")
+        find_path(v8_lib_dir NAMES "v8_libbase.${v8_ext}" "v8_libplatform.${v8_ext}" "v8.${v8_ext}"  HINTS "${v8_search_libdir}")
     endif()
     set(v8_syslib "dl;pthread")
 endif()
