--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ endif()
 set(v8_libnames "")
 if (WIN32)
     if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-        set(v8_flags "-D__clang__;${v8_flags}")
+        set(v8_flags "-D__clang__;${v8_flags};WIN32")
     endif()
     if (v8_shared)
         set(v8_ext "dll.lib")
@@ -50,7 +50,7 @@ if (WIN32)
             message("Adding copy instruction for ${file};  ${CMAKE_BINARY_DIR}/$<CONFIG>")
             add_custom_command(
                 TARGET copy POST_BUILD 
-                COMMAND ${CMAKE_COMMAND} -E copy_if_different ${v8_lib_dir_shared}/${file} ${CMAKE_BINARY_DIR}/$<CONFIG>/${file})
+                COMMAND ${CMAKE_COMMAND} -E copy_if_different ${v8_lib_dir}/${file} ${CMAKE_BINARY_DIR}/$<CONFIG>/${file})
         endforeach()
         add_dependencies(v8_deps INTERFACE copy)
     endif()
